Fix mobile menu positioning and close button alignment per user feedback

--- a/frontend/static/css/components/mobile-menu.css
+++ b/frontend/static/css/components/mobile-menu.css
@@ -6,7 +6,7 @@
 #mobileMenuToggle {
   display: none; /* Hidden by default, shown only on mobile */
   position: fixed;
-  top: 50px;
+  top: 10px;
   right: 10px;
   z-index: 70;
   width: 44px;
@@ -75,8 +75,8 @@
 
 #mobileMenuClose {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 2px;
+  right: 2px;
   width: 30px;
   height: 30px;
   border: none;
